<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_general_preference">
        <CheckBoxPreference
            android:key="save_main_activity_page"
            android:title="@string/title_save_home_state"
            android:summary="@string/summary_save_home_state"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="enable_watermark"
            android:title="@string/title_enable_watermark"
            android:summary="@string/summary_enable_watermark"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_clear_data">
        <Preference
            android:title="@string/title_app_info"
            android:summary="@string/summary_app_info">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:com.github.drunlin.guokr"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
